k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arrienda-api
  namespace: arriendatufinca
spec:
  selector:
    matchLabels:
      app: arrienda-api
  replicas: 1
  template:
    metadata:
      labels:
        app: arrienda-api
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
      - name: github-secret
      containers:
      - name: arrienda-api-container
        image: elczar/arrienda_tu_finca:3.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "500m"
            memory: "512Mi"
            ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: arrienda-api
  namespace: arriendatufinca
spec:
  selector:
    app: arrienda-api
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8080
