k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arrienda-ingress
  namespace: arriendatufinca
spec:
   ingressClassName: public
   rules:
   - host: 
     http:
       paths:
       - path: /api/v2
         pathType: Prefix
         backend:
           service:
             name: arrienda-api
             port:
               number: 8090
